# g-dash

./: .gitignore  LICENSE  README.md  pyproject.toml
g_dash/: hello.py
