[tool.poetry]
name = "python-cli"
version = "0.1.0"
description = ""
authors = ["Hendrik Crause"]
readme = "README.md"
packages = [{include = "g_dash"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "g_dash.hello:hello"
